// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MultiSelectAttributeFilterHandler should trigger init cancel callback on another init call: getInitStatus after load 1`] = `"success"`;

exports[`MultiSelectAttributeFilterHandler should trigger init cancel callback on another init call: getInitStatus before load 1`] = `"pending"`;

exports[`MultiSelectAttributeFilterHandler should trigger init cancel callback on another init call: getInitStatus during another load 1`] = `"loading"`;

exports[`MultiSelectAttributeFilterHandler should trigger init cancel callback on another init call: getInitStatus during load 1`] = `"loading"`;

exports[`MultiSelectAttributeFilterHandler should trigger init cancel callback on another init call: onInicStart 1 parameters 1`] = `
Array [
  Object {
    "correlation": "init1",
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should trigger init cancel callback on another init call: onInicStart 2 parameters 1`] = `
Array [
  Object {
    "correlation": "init2",
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should trigger init cancel callback on another init call: onInitCancel parameters 1`] = `undefined`;

exports[`MultiSelectAttributeFilterHandler should trigger init error callback: getInitStatus after load 1`] = `"error"`;

exports[`MultiSelectAttributeFilterHandler should trigger init error callback: getInitStatus before load 1`] = `"pending"`;

exports[`MultiSelectAttributeFilterHandler should trigger init error callback: getInitStatus during load 1`] = `"loading"`;

exports[`MultiSelectAttributeFilterHandler should trigger init error callback: onInicStart parameters 1`] = `
Array [
  Object {
    "correlation": "init",
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should trigger init error callback: onInitError parameters 1`] = `
Array [
  Object {
    "correlation": "init",
    "error": [Error: No attribute recording non-existing-displayForm],
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should trigger init success callback: getInitStatus after load 1`] = `"success"`;

exports[`MultiSelectAttributeFilterHandler should trigger init success callback: getInitStatus before load 1`] = `"pending"`;

exports[`MultiSelectAttributeFilterHandler should trigger init success callback: getInitStatus during load 1`] = `"loading"`;

exports[`MultiSelectAttributeFilterHandler should trigger init success callback: onInicStart parameters 1`] = `
Array [
  Object {
    "correlation": "init",
  },
]
`;

exports[`MultiSelectAttributeFilterHandler should trigger init success callback: onInitSuccess parameters 1`] = `
Array [
  Object {
    "correlation": "init",
  },
]
`;
